# ESP32S3_LVGL_Project

./: CMakeLists.txt  README.md  sdkconfig.old
Hardware/: ESP32S3_LCD_Card.kicad_pcb  ESP32S3_LCD_Card.kicad_prl  ESP32S3_LCD_Card.kicad_pro  ESP32S3_LCD_Card.kicad_sch  fp-info-cache
Hardware/ESP32S3_Board_Gerber/: ESP32S3_LCD_Card-B_Cu.gbr  ESP32S3_LCD_Card-B_Mask.gbr  ESP32S3_LCD_Card-B_Paste.gbr  ESP32S3_LCD_Card-B_Silkscreen.gbr  ESP32S3_LCD_Card-Edge_Cuts.gbr  ESP32S3_LCD_Card-F_Cu.gbr  ESP32S3_LCD_Card-F_Mask.gbr  ESP32S3_LCD_Card-F_Paste.gbr  ESP32S3_LCD_Card-F_Silkscreen.gbr  ESP32S3_LCD_Card-NPTH-drl_map.ps  ESP32S3_LCD_Card-NPTH.drl  ESP32S3_LCD_Card-PTH-drl_map.ps  ESP32S3_LCD_Card-PTH.drl  ESP32S3_LCD_Card-job.gbrjob
Hardware/bom/: ibom.html
Software/: CMakeLists.txt  Makefile  README.md  sdkconfig  sdkconfig.old
Software/components/easyio_lib/: CMakeLists.txt
Software/fftdata/: fft_T2.xlsx  fft_fc.xlsx  fftdata.xlsx
Software/main/: CMakeLists.txt  app_main.c
Software/main/Lvgl_Task/image/: _cap_150x150.c  _konhz_150x150.c  _music_120x120.c  _set_120x120.c  _tianqi_120x120.c  _wifi_120x120.c  _xingqiu_120x120.c  lv_font_medium_26.c
Software/main/Lvgl_Task/include/: gui_guider.h  lvgl_init.h
Software/main/Lvgl_Task/spaceman/: astronaut1.c  astronaut10.c  astronaut11.c  astronaut12.c  astronaut13.c  astronaut14.c  astronaut2.c  astronaut3.c  astronaut4.c  astronaut5.c  astronaut6.c  astronaut7.c  astronaut8.c  astronaut9.c
Software/main/Lvgl_Task/src/: gui_guider.c  lvgl_init.c
Software/main/Lvgl_Task/weather/: _humidity_50x50.c  _rain_100x100.c  _snow_100x100.c  _storm_100x100.c  _sun_100x100.c  _temp_50x50.c  _windy_100x100.c
Software/main/Os_Task/include/: app_sem.h  app_sem_queue.h  app_task.h
Software/main/Os_Task/src/: app_sem.c  app_sem_queue.c  app_task.c
Software/main/Page_Task/src/: page_fft.c  page_http.c  page_wifi.c
components/button/include/: button.h
components/button/src/: bsp_button.c  button.c
main/: CMakeLists.txt  app_main.c
main/Lvgl_Task/image/: _bg_240x240.c  _game_150x150.c  _set_150x150.c
main/Lvgl_Task/include/: gui_guider.h  lvgl_init.h
main/Lvgl_Task/src/: gui_guider.c  lvgl_init.c
main/Os_Task/include/: app_sem.h  app_task.h
(+9 files in other folders)
